MB-40185: Handle race between create and scan timers across workers for the same partition when LCB operations take long or timeout

Change-Id: Id6893e577bc83373ac7b57486c4068f5c05f5f98
Reviewed-on: http://review.couchbase.org/c/eventing/+/131612
Reviewed-by: CI Bot
Reviewed-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>
Tested-by: Jeelan Basha Poola <jeelan.poola@couchbase.com>