features/include/utils.h
@@ -225,4 +225,6 @@ std::string GetConnectionStr(const std::string &end_point,
 
 std::string BuildUrl(const std::string &host, const std::string &path);
 
+int64_t GetUnixTime();
+
 #endif
